# the-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  TAGGING_GUIDE.md
scripts/: detect.sh  gemini_review.sh  post_raw_summary.sh  post_review.sh  run_aderyn.sh  run_cargo_audit.sh  run_slither.sh
tests/: Bank.sol  CriticalDeFi.sol  SimpleVault.sol  VulnerableVault.sol
tests/move-example/sources/: safe_token.move  vulnerable_token.move
tests/rust-example/: Cargo.toml
tests/rust-example/src/: main.rs
